@startuml erd

' --- Style moderne (couleurs CSS QuestsArena) ---
skinparam shadowing false
skinparam roundCorner 15
skinparam defaultFontName "Raleway, sans-serif"

skinparam entity {
    BackgroundColor #e5fcff
    BorderColor #4a2040
    ArrowColor #e9b872
    FontColor #0e060c
}
skinparam class {
    BackgroundColor #e5fcff
    BorderColor #4a2040
    ArrowColor #e9b872
    FontColor #0e060c
    HeaderBackgroundColor #a96fff
}
' --------------------------------------------

entity User{
    *id: string 
    --- 
    *username: string
    *email: string 
    *password: string
    image : string
    *created_at: datetime
}

entity Challenge{
    *id : string
    --- 
    *title : sttring 
    *description : string
    *rules : string
    *game : string
    difficulty : string
    *created_by : foreign_key 
    validated : boolean
    *created_at: datetime
}

entity Participation{
    *id: string 
    --- 
    *users_id: FK 
    *video_url: string 
    *description: string
    validated : boolean
    *created_at: datetime
}

entity Vote{
  *id: string
  ---
  *user_id: FK
  target_id: salt
  created_at: datetime
}

User ||--o{ Challenge: "crée"
User ||--o{ Participation: "soumet"
User ||--o{ Vote: "dépose"}
Challenge ||--o{ Participation: "possède"
Challenge ||--o{ Vote: "possède"
Participation ||--o{ Vote: "possède"

@enduml